# rb-ldap-python

./: .flake8  .gitignore  LICENSE  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
docs/: add.md  alert-unpaid.md  delete-unpaid.md  disable-unpaid.md  disable.md  enable.md  free.md  generate-docs.md  generate.md  new-year.md  rb-ldap.md  renew.md  reset-password.md  reset-shell.md  search.md  update.md
rbldap/: __init__.py  __main__.py  cli_parser.py  mail.py
rbldap/accounts/: __init__.py  clients.py  create.py  decrement.py  delete.py  disable.py  free.py  gid.py  passwd.py  shell.py  uid.py
rbldap/accounts/batch/: alert_unpaid.py  disable_unpaid.py
rbldap/accounts/errors/: __init__.py  duplicate.py  id.py  not_found.py
rbldap/accounts/reset/: __init__.py  passwd.py
rbldap/accounts/search/: dcu.py  redbrick.py
rbldap/accounts/types/: dcu.py  rbuser.py
rbldap/commands/: __init__.py  add.py  disable.py  enable.py  free.py  generate.py  renew.py  search.py  update.py
rbldap/commands/batch/: alert_unpaid.py  delete_unpaid.py  disable_unpaid.py  new_year.py
rbldap/commands/prompt/: __init__.py  username.py
rbldap/commands/reset/: passwd.py  shell.py
rbldap/fs/: __init__.py
rbldap/mail/: __init__.py  account_details.py  alert_unpaid.py  client.py  password_reset.py
src/: __main__.py  add.py  cli_parser.py  disable.py  enable.py  file.py  free.py  renew.py  update.py  version.py
src/accounts/: __init__.py  add.py  enable.py  free.py  renew.py  update.py
src/accounts/batch/: __init__.py  alert_unpaid.py  new_year.py  (+2 more)
src/batch/: __init__.py  alert_unpaid.py  delete_unpaid.py  disable_unpaid.py  new_year.py
src/commands/: __init__.py  add.py  disable.py  enable.py  free.py  renew.py  search.py  update.py
src/fs/: read.py
src/mail/: __init__.py
src/reset/: __init__.py  passwd.py  shell.py
src/search/: __init__.py  dcu.py  redbrick.py
tests/: conftest.py  search.py  test_new_year.py
(+17 files in other folders)
